--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -59,38 +59,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kc2-0S-iNR">
-                                <rect key="frame" x="66" y="126" width="275" height="197"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndQ-Dv-Cbs">
-                                <rect key="frame" x="16" y="386" width="350" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GUo-ai-hOR">
-                                <rect key="frame" x="22" y="458" width="338" height="71"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rOy-ud-p6L">
-                                <rect key="frame" x="22" y="553" width="350" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="jJ4-I4-r74">
-                                <rect key="frame" x="171" y="331" width="65" height="56"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </activityIndicatorView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1F-CM-7ek" userLabel="TopView">
+                                <rect key="frame" x="0.0" y="103.00000000000003" width="393" height="357.66666666666674"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kc2-0S-iNR">
+                                        <rect key="frame" x="111" y="121.33333333333334" width="171" height="115"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="115" id="9cE-s0-04M"/>
+                                            <constraint firstAttribute="width" constant="171" id="RcZ-ys-Fkb"/>
+                                        </constraints>
+                                    </imageView>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="jJ4-I4-r74">
+                                        <rect key="frame" x="164" y="254" width="65" height="56"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="65" id="3j6-cr-FUH"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="56" id="OZa-78-Idp"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="a2h-We-Mjj"/>
+                                            <constraint firstAttribute="height" constant="56" id="fDA-ct-SUY"/>
+                                        </constraints>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="kc2-0S-iNR" firstAttribute="centerY" secondItem="H1F-CM-7ek" secondAttribute="centerY" id="Abj-uG-HNj"/>
+                                    <constraint firstItem="kc2-0S-iNR" firstAttribute="centerX" secondItem="H1F-CM-7ek" secondAttribute="centerX" id="wUa-ZJ-bqj"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s94-jK-5aO" userLabel="RedView">
+                                <rect key="frame" x="0.0" y="460.66666666666674" width="393" height="357.33333333333326"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="orP-U5-dgK">
+                                        <rect key="frame" x="160" y="93.999999999999943" width="73.333333333333314" height="169"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndQ-Dv-Cbs">
+                                                <rect key="frame" x="0.0" y="0.0" width="73.333333333333329" height="37"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GUo-ai-hOR">
+                                                <rect key="frame" x="0.0" y="66" width="73.333333333333329" height="37"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rOy-ud-p6L">
+                                                <rect key="frame" x="0.0" y="132" width="73.333333333333329" height="37"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="orP-U5-dgK" firstAttribute="centerX" secondItem="s94-jK-5aO" secondAttribute="centerX" id="68i-wW-ofU"/>
+                                    <constraint firstItem="orP-U5-dgK" firstAttribute="centerY" secondItem="s94-jK-5aO" secondAttribute="centerY" id="XTV-zg-IE1"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YY2-vW-7jP"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="s94-jK-5aO" firstAttribute="height" secondItem="H1F-CM-7ek" secondAttribute="height" id="3vI-7L-Rtg"/>
+                            <constraint firstItem="s94-jK-5aO" firstAttribute="leading" secondItem="YY2-vW-7jP" secondAttribute="leading" id="9qj-Ya-gHr"/>
+                            <constraint firstItem="H1F-CM-7ek" firstAttribute="top" secondItem="YY2-vW-7jP" secondAttribute="top" id="EJV-P9-zkO"/>
+                            <constraint firstItem="s94-jK-5aO" firstAttribute="trailing" secondItem="YY2-vW-7jP" secondAttribute="trailing" id="OxR-D9-QrF"/>
+                            <constraint firstItem="H1F-CM-7ek" firstAttribute="trailing" secondItem="YY2-vW-7jP" secondAttribute="trailing" id="aAs-h3-7b9"/>
+                            <constraint firstItem="s94-jK-5aO" firstAttribute="height" secondItem="H1F-CM-7ek" secondAttribute="height" id="bA3-gi-gZU"/>
+                            <constraint firstItem="s94-jK-5aO" firstAttribute="bottom" secondItem="YY2-vW-7jP" secondAttribute="bottom" id="epv-t7-m5w"/>
+                            <constraint firstItem="s94-jK-5aO" firstAttribute="top" secondItem="H1F-CM-7ek" secondAttribute="bottom" id="o3W-Y1-a6z"/>
+                            <constraint firstItem="H1F-CM-7ek" firstAttribute="leading" secondItem="YY2-vW-7jP" secondAttribute="leading" id="vb6-zW-bH7"/>
+                            <constraint firstItem="s94-jK-5aO" firstAttribute="top" secondItem="H1F-CM-7ek" secondAttribute="bottom" id="zz1-8P-jXF"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7qZ-RW-sLB"/>
                     <connections>
@@ -103,7 +145,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M8z-9J-Z7m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1681.679389312977" y="29.577464788732396"/>
+            <point key="canvasLocation" x="1680.1526717557251" y="28.87323943661972"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LaM-Pc-23j">
